--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -206,29 +206,29 @@ of: </h3>
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSozsA3cCeDoUBlFT5U5mV3GHgxiQz6I1ge3dMo9SoqyVSXOOeJTDmJXop6GcaavUraapulkw3sTf5K/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 <h1>Works Cited</h1>
-<span class="hang">Badža, M. M., & Barjaktarović, M. (2020). Classification of brain tumors from 
+<p class="hang">Badža, M. M., & Barjaktarović, M. (2020). Classification of brain tumors from 
   MRI images using a convolutional neural network. Applied Sciences, 10(6), 1999. 
-  https://doi.org/10.3390/app10061999 </span>
-<span class="hang">Brain tumor symptoms and signs. moffitt. (n.d.). https://www.moffitt.org/cancers/brain-tumor/symptoms/ </span>
-<span class="hang">Brain tumor faqs - learn more or donate today!: Abta. 
+  https://doi.org/10.3390/app10061999 </p>
+<p class="hang">Brain tumor symptoms and signs. moffitt. (n.d.). https://www.moffitt.org/cancers/brain-tumor/symptoms/ </p>
+<p class="hang">Brain tumor faqs - learn more or donate today!: Abta. 
   American Brain Tumor Association. (2024, November 12). 
   https://www.abta.org/about-brain-tumors/brain-tumor-education/#:~:text=Approximately%2090%2C000%20people%20are%20diagnosed,
-  primary%20brain%20and%20CNS%20tumors </span>
-<span class="hang">Brain tumor types. Johns Hopkins Medicine. (2021, November 8). 
-  https://www.hopkinsmedicine.org/health/conditions-and-diseases/brain-tumor/brain-tumor-types </span>
-<span class="hang">Comment, info, M., GeeksforGeeks , & GeeksforGeeks. (2025, February 27). Supervised and unsupervised learning. 
-  GeeksforGeeks. https://www.geeksforgeeks.org/supervised-unsupervised-learning/ </span>
-<span class="hang">Evanson, J. (2019). Radiology of the pituitary. Encyclopedia of Endocrine Diseases, 
-  339–348. https://doi.org/10.1016/b978-0-12-801238-3.65233-9 </span>
-<span class="hang">HealthfulHelps Editors. (2024, April 15). How many hospitals use artificial intelligence? (New Data). HealthfulHelps. 
-  https://healthfulhelps.com/how-many-hospitals-use-artificial-intelligence-new-data/#:~:text=Over%2090%25%20of%20hospitals%20now,care%20and%20optimize%20resource%20allocation </span>
-<span class="hang">Kelley, K. (2020, April 30). What happens during an MRI?. Intermountain Medical Imaging. 
-  https://aboutimi.com/what-happens-during-an-mri/ </span>
-<span class="hang">Mitchell, M. (2025, February 13). LLMS and World Models, part 1. LLMs and World Models, Part 1 - 
-  by Melanie Mitchell. https://aiguide.substack.com/p/llms-and-world-models-part-1 </span>
-<span class="hang">Normal brain (MRI) | radiology case | radiopaedia.org. (n.d.). https://radiopaedia.org/cases/normal-brain-mri-6 </span>
-<span class="hang">Peloso, M. (2022, January 21). Moving toward “virtual biopsy” of gliomas using Artificial Intelligence. Brigham On a Mission.
-  https://www.brighamhealthonamission.org/2018/12/18/moving-toward-virtual-biopsy-of-gliomas-using-artificial-intelligence/ </span>
-<span class="hang">What is a tumor?. Cleveland Clinic. (2024, December 19). https://my.clevelandclinic.org/health/diseases/21881-tumor </span>
+  primary%20brain%20and%20CNS%20tumors </p>
+<p class="hang">Brain tumor types. Johns Hopkins Medicine. (2021, November 8). 
+  https://www.hopkinsmedicine.org/health/conditions-and-diseases/brain-tumor/brain-tumor-types </p>
+<p class="hang">Comment, info, M., GeeksforGeeks , & GeeksforGeeks. (2025, February 27). Supervised and unsupervised learning. 
+  GeeksforGeeks. https://www.geeksforgeeks.org/supervised-unsupervised-learning/ </p>
+<p class="hang">Evanson, J. (2019). Radiology of the pituitary. Encyclopedia of Endocrine Diseases, 
+  339–348. https://doi.org/10.1016/b978-0-12-801238-3.65233-9 </p>
+<p class="hang">HealthfulHelps Editors. (2024, April 15). How many hospitals use artificial intelligence? (New Data). HealthfulHelps. 
+  https://healthfulhelps.com/how-many-hospitals-use-artificial-intelligence-new-data/#:~:text=Over%2090%25%20of%20hospitals%20now,care%20and%20optimize%20resource%20allocation </p>
+<p class="hang">Kelley, K. (2020, April 30). What happens during an MRI?. Intermountain Medical Imaging. 
+  https://aboutimi.com/what-happens-during-an-mri/ </p>
+<p class="hang">Mitchell, M. (2025, February 13). LLMS and World Models, part 1. LLMs and World Models, Part 1 - 
+  by Melanie Mitchell. https://aiguide.substack.com/p/llms-and-world-models-part-1 </p>
+<p class="hang">Normal brain (MRI) | radiology case | radiopaedia.org. (n.d.). https://radiopaedia.org/cases/normal-brain-mri-6 </p>
+<p class="hang">Peloso, M. (2022, January 21). Moving toward “virtual biopsy” of gliomas using Artificial Intelligence. Brigham On a Mission.
+  https://www.brighamhealthonamission.org/2018/12/18/moving-toward-virtual-biopsy-of-gliomas-using-artificial-intelligence/ </p>
+<p class="hang">What is a tumor?. Cleveland Clinic. (2024, December 19). https://my.clevelandclinic.org/health/diseases/21881-tumor </p>
 
 
