--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -212,8 +212,8 @@ of: </h3>
 <p class="hang">Brain tumor symptoms and signs. moffitt. (n.d.). https://www.moffitt.org/cancers/brain-tumor/symptoms/ </p>
 <p class="hang">Brain tumor faqs - learn more or donate today!: Abta. 
   American Brain Tumor Association. (2024, November 12).</p>
-  <p>https://www.abta.org/about-brain-tumors/brain-tumor-education/#:~:text=Approximately%2090%2C000%20people%20are%20diagnosed,
-  primary%20brain%20and%20CNS%20tumors </p>
+  <p>https://www.abta.org/about-brain-tumors/brain-tumor-education/#:~:text=Approximately%2090%2C000%20people%20are%20diagnosed,</p>
+  <p>primary%20brain%20and%20CNS%20tumors </p>
 <p class="hang">Brain tumor types. Johns Hopkins Medicine. (2021, November 8). 
   https://www.hopkinsmedicine.org/health/conditions-and-diseases/brain-tumor/brain-tumor-types </p>
 <p class="hang">Comment, info, M., GeeksforGeeks , & GeeksforGeeks. (2025, February 27). Supervised and unsupervised learning. 
@@ -221,7 +221,8 @@ of: </h3>
 <p class="hang">Evanson, J. (2019). Radiology of the pituitary. Encyclopedia of Endocrine Diseases, 
   339–348. https://doi.org/10.1016/b978-0-12-801238-3.65233-9 </p>
 <p class="hang">HealthfulHelps Editors. (2024, April 15). How many hospitals use artificial intelligence? (New Data). HealthfulHelps. </p>
-  <p>https://healthfulhelps.com/how-many-hospitals-use-artificial-intelligence-new-data/#:~:text=Over%2090%25%20of%20hospitals%20now,care%20and%20optimize%20resource%20allocation </p>
+  <p>https://healthfulhelps.com/how-many-hospitals-use-artificial-intelligence-new-data</p>
+  <p>/#:~:text=Over%2090%25%20of%20hospitals%20now,care%20and%20optimize%20resource%20allocation </p>
 <p class="hang">Kelley, K. (2020, April 30). What happens during an MRI?. Intermountain Medical Imaging. 
   https://aboutimi.com/what-happens-during-an-mri/ </p>
 <p class="hang">Mitchell, M. (2025, February 13). LLMS and World Models, part 1. LLMs and World Models, Part 1 - 
