--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -112,8 +112,8 @@ the model adjusts its answers until it has a high accuracy or it runs through al
 <img class="centerImage" src="supervisedLearning.png"   alt="Supervised Learning">
 
 <h2>Results</h2>
-<img class ="floatImage" src="CertainScan.png"   alt="MRI Image">
-<img class ="floatImage" src="UncertainScan.png"   alt="MRI Image">
+<img class ="certainty" src="CertainScan.png"   alt="MRI Image">
+<img class ="certainty" src="UncertainScan.png"   alt="MRI Image">
 <h3>Just like humans have certainty when answering questions, my model's output is a representation of how confident it is in its
   answers. The two images on the right are what my program outputs when prompted with an image. 
   The MRI scan is the test image, and the graphs show its certainty in the answers. The top image shows a certain 
