--- a/experience.html
+++ b/experience.html
@@ -59,8 +59,8 @@
       <div class="container left">
         <div class="content">
           <h2>March 2025</h2>
-          <p>I was honored to be awarded first place for Schoolcraft's Pythagorean Prize; this award goes to the top three math students. I also had
-          the opportunity to present at STEAM @ Schoolcraft and I recieved first place for my program that detects brain tumors. </p>
+          <p>I was honored to be awarded first place for the Pythagorean Prize; this award goes to the top three math students at Schoolcraft. I also had
+          the opportunity to present at STEAM @ Schoolcraft and I received first place for my program that detects brain tumors. </p>
         </div>
       </div>
       <div class="container right">
@@ -74,8 +74,8 @@
       <div class="container left">
         <div class="content">
           <h2>Sept. 2024</h2>
-          <p>I was promoted to President of the Math and Physics Club. I have the opportunity to run club meetings and
-            work with student activities for campus-wide events.
+          <p>I was promoted to President of the Math and Physics Club. I help run club meetings, plan events with Student Activities,
+            and prepare members for the AMATYC Math League Competition.
           </p>
         </div>
       </div>
@@ -91,7 +91,7 @@
         <div class="content">
           <h2>Dec 2023</h2>
           <p>I joined Schoolcraft's Honors Program. Through the program I am given the opportunity to work with professors on class-related projects.
-            Since being in the program I have built a Rubik's cube timer in C++, written a Psycology literature review and worked with my statistics professor
+            Since being in the program I have built a Rubik's cube timer in C++, written a Psychology literature review and worked with my statistics professor
             on a data-visualization project. 
           </p>
         </div>
