--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
           <div class="overlay-text">Hi! I'm Sinclair</div>
           <div class="overlay-text2">Overview</div>
 
-          <div class="overlay-text">  🎓I am a Sophomore CS student studying at Schoolcraft College who is transferring to The University of Michigan in the Fall
+          <div class="overlay-text">  🎓I am a sophomore CS student studying at Schoolcraft College who is transferring to The University of Michigan in the Fall
           </div>
           <div class="overlay-text"> 💡 I have three years of coding experience in Python and C++ with goals to make impactful coding solutions
           </div>
-          <div class="overlay-text"> 👨‍💻 My longterm goal is to get a masters in AI and pursue a career in AI/ML development 
+          <div class="overlay-text"> 👨‍💻 My long term goal is to get a masters in AI and pursue a career in AI/ML development 
           </div>
           <div class="overlay-text"> 😇 I always remember to thank my chatbots
           </div>
