--- a/tumorDetection.html
+++ b/tumorDetection.html
@@ -16,6 +16,7 @@
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="experience.html">Experience</a></li>
     <li><a href="projects.html">Projects</a></li>
+    <li><a href="boredomBlog.html">Boredom Blog</a></li>
     <li></a></li>
   </ul>
 
@@ -31,6 +32,7 @@
     <div id="myLinks">
       <a href="experience.html">Experience</a>
       <a href="projects.html">Projects</a>
+      <a href="boredomBlog.html">Boredom Blog</a>
     </div>
     <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -227,5 +229,3 @@ of: </h3>
 <p class="hang">Peloso, M. (2022, January 21). Moving toward “virtual biopsy” of gliomas using Artificial Intelligence. Brigham On a Mission.
   https://www.brighamhealthonamission.org/2018/12/18/moving-toward-virtual-biopsy-of-gliomas-using-artificial-intelligence/ </p>
 <p class="hang">What is a tumor?. Cleveland Clinic. (2024, December 19). https://my.clevelandclinic.org/health/diseases/21881-tumor </p>
-
-
