--- a/boredomBlog.html
+++ b/boredomBlog.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sinclair Hansen </title>
   <meta name="description" content="Sinclair Hansen's Epic Portfolio">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="boredomBlog.css">
 </head>
 
@@ -64,6 +63,8 @@
       <div class="leftcolumn">
         <div class="card">
           <a class="link" href="tumorDetection.html" rel="noopener noreferrer">Pixels to Prognosis: Machine Learning in Tumor Detection</a>
+          <div class="pixelsToProgImage" style="height:200px;"></div>
+
           <h5>Sinclair Hansen, March 21, 2025</h5>
 
           <p>In recent years, </p>
