--- a/boredomBlog.html
+++ b/boredomBlog.html
@@ -61,9 +61,25 @@
      
     <div class="row">
       <div class="leftcolumn">
+
+        <div class="card">
+          <a class="link" href="CubeScramble.html" rel="noopener noreferrer">How Many Ways Can You Scramble a Rubik's Cube?</a>
+          <div class="rubiksCubeImage" style="height:200px;"></div>
+          <h5>Sinclair Hansen, March 27, 2025</h5>
+
+          <p>The Rubik’s Cube is one of the 
+            most popular puzzles in the world. People’s 
+            experiences with this toy range from solving it in under 
+            three seconds to scrambling it and leaving it on a shelf because 
+            it's too difficult. Whether or not you can solve it, there's a lot of 
+            fascinating math behind this puzzle.</p>
+        </div> 
+
+
         <div class="card">
           <a class="link" href="tumorDetection.html" rel="noopener noreferrer">Pixels to Prognosis: Machine Learning in Tumor Detection</a>
           <div class="pixelsToProgImage" style="height:200px;"></div>
+
 
           <h5>Sinclair Hansen, March 21, 2025</h5>
 
