--- a/CubeScramble.html
+++ b/CubeScramble.html
@@ -127,7 +127,7 @@
 
 
 
-<h2>What's Next?</h2>
+<h2>Final Thoughts</h2>
 
 <h3>With over 43 quintillion possible scrambles, 
     it's clear that no two randomly scrambled cubes are likely to be 
