--- a/boredomBlog.html
+++ b/boredomBlog.html
@@ -115,7 +115,9 @@
       </div>
       <div class="rightcolumn">
         <div class="card">
-          <img class="fakeimg" src="SinclairPic.jpg"   alt="About Image">
+          <div class="rubiksCubeImage" style="height:200px;"></div>
+
+
           <a class="link" href="index.html" rel="noopener noreferrer">About Me</a>
           <p>My name is Sinclair Hansen and I'm a sophomore CS student...</p>
         </div>
