--- a/boredomBlog.html
+++ b/boredomBlog.html
@@ -115,7 +115,7 @@
       </div>
       <div class="rightcolumn">
         <div class="card">
-          <div class="rubiksCubeImage" style="height:200px;"></div>
+          <div class="fakeImg" style="height:200px;"></div>
 
 
           <a class="link" href="index.html" rel="noopener noreferrer">About Me</a>
