--- a/CubeScramble.html
+++ b/CubeScramble.html
@@ -55,7 +55,7 @@
   <img class ="headerImage" src="RubiksCubeLogo.jpeg"   alt="Brain Image">
 
     <h1>How Many Ways Can You Scramble a Rubik's Cube?</h1>
-    <h3>The math behind rubik’s cube scrambles</h3>
+    <h3 class="center">The math behind rubik’s cube scrambles</h3>
 
     <h3>The Rubik’s Cube is one of the most popular puzzles in the world. People’s experiences with this toy range from solving it in under three seconds to scrambling it and leaving it on a shelf because it's too difficult. Whether or not you can solve it, there's a lot of fascinating math behind this puzzle.
         I've been solving Rubik’s Cubes since I was ten years old and sometimes I would sit in one spot and solve the cube hundreds of times. This got to the point where I was at one point worried that I would run through all the possibilities. 
