--- a/boredomBlog.html
+++ b/boredomBlog.html
@@ -115,9 +115,7 @@
       </div>
       <div class="rightcolumn">
         <div class="card">
-          <div class="fakeimg" style="height:200px;"></div>
-
-
+          <img class="fakeimg" src="SinclairPic.jpg"   alt="About Image">
           <a class="link" href="index.html" rel="noopener noreferrer">About Me</a>
           <p>My name is Sinclair Hansen and I'm a sophomore CS student...</p>
         </div>
