--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
         </section>
 
-        <img class = "aboutImage" src="SinclairPhoto.jpg" alt="Sinclair Photo">
+        <img class = "aboutImage" src="PythPhoto.jpg" alt="Sinclair Photo">
 
         
 
