--- a/boredomBlog.html
+++ b/boredomBlog.html
@@ -116,7 +116,7 @@
       </div>
       <div class="rightcolumn">
         <div class="card">
-          <img class="fakeimg" src="SinclairPic.jpg"   alt="About Image">
+          <img class="fakeimg" src="PythPhoto.jpg"   alt="About Image">
           <a class="link" href="index.html" rel="noopener noreferrer">About Me</a>
           <p>My name is Sinclair Hansen and I'm a sophomore CS student...</p>
         </div>
