--- a/boredomBlog.html
+++ b/boredomBlog.html
@@ -92,6 +92,16 @@
             The program is designed to assist doctors in identifying tumors quicker with lower error rates. The program also shows how effortless it is to make a positive impact on our medical care using AI.</p>
         </div>
 
+        <div class="card">
+          <a class="link" href="pendulum.html" rel="noopener noreferrer">DOUBLE PENDULUM!!!!</a>
+          <div class="pixelsToProgImage" style="height:200px;"></div>
+          <h5>Sinclair Hansen, March 21, 2025</h5>
+
+          <p>CLICK</p>
+          <p>TO LEARN ABOUT DOUBLE PENDULUMS</p>
+        </div> 
+
+
         <!-- This is how we add new sections
         <div class="card">
           <a class="link" href="tumorDetection.html" rel="noopener noreferrer">Pixels to Prognosis: Machine Learning in Tumor Detection</a>
