--- a/boredomBlog.html
+++ b/boredomBlog.html
@@ -94,8 +94,8 @@
 
         <div class="card">
           <a class="link" href="pendulum.html" rel="noopener noreferrer">DOUBLE PENDULUM!!!!</a>
-          <div class="pixelsToProgImage" style="height:200px;"></div>
-          <h5>Sinclair Hansen, March 21, 2025</h5>
+          <div class="chaosImage" style="height:200px;"></div>
+          <h5>Sinclair Hansen, April 25, 2025</h5>
 
           <p>CLICK</p>
           <p>TO LEARN ABOUT DOUBLE PENDULUMS</p>
