--- a/boredomBlog.html
+++ b/boredomBlog.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sinclair Hansen </title>
-  <link rel="icon" type ="image/png" href ="Favicon.png">
   <meta name="description" content="Sinclair Hansen's Epic Portfolio">
   <link rel="stylesheet" href="boredomBlog.css">
 </head>
@@ -62,6 +61,14 @@
      
     <div class="row">
       <div class="leftcolumn">
+        <div class="card">
+          <a class="link" href="chaosTheory.html" rel="noopener noreferrer">Chaos Theory</a>
+          <div class="chaosImage" style="height:200px;"></div>
+          <h5>Sinclair Hansen, April 26, 2025</h5>
+
+          <p>How a 0.001 degree change can lead to chaos.</p>
+          <p></p>
+        </div> 
 
         <div class="card">
           <a class="link" href="CubeScramble.html" rel="noopener noreferrer">How Many Ways Can You Scramble a Rubik's Cube?</a>
@@ -91,16 +98,6 @@
             the development of a machine learning-based program capable of identifying different types of tumors in MRI scans. 
             The program is designed to assist doctors in identifying tumors quicker with lower error rates. The program also shows how effortless it is to make a positive impact on our medical care using AI.</p>
         </div>
-
-        <div class="card">
-          <a class="link" href="pendulum.html" rel="noopener noreferrer">DOUBLE PENDULUM!!!!</a>
-          <div class="chaosImage" style="height:200px;"></div>
-          <h5>Sinclair Hansen, April 25, 2025</h5>
-
-          <p>CLICK</p>
-          <p>TO LEARN ABOUT DOUBLE PENDULUMS</p>
-        </div> 
-
 
         <!-- This is how we add new sections
         <div class="card">
