--- a/boredomBlog.html
+++ b/boredomBlog.html
@@ -66,7 +66,7 @@
           <div class="chaosImage" style="height:200px;"></div>
           <h5>Sinclair Hansen, April 26, 2025</h5>
 
-          <p>How a 0.001 degree change can lead to chaos.</p>
+          <p>How a 0.001 degree change can make all the difference</p>
           <p></p>
         </div> 
 
