--- a/CubeScramble.html
+++ b/CubeScramble.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sinclair Hansen </title>
   <meta name="description" content="Sinclair Hansen's Epic Portfolio">
-  <link rel="icon" type ="image/png" href ="Favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="CubeScramble.css">
 </head>
@@ -56,7 +55,7 @@
   <img class ="headerImage" src="RubiksCubeLogo.jpeg"   alt="Brain Image">
 
     <h1>How Many Ways Can You Scramble a Rubik's Cube?</h1>
-    <h3 class="center">The math behind rubik’s cube scrambles</h3>
+    <h3>The math behind rubik’s cube scrambles</h3>
 
     <h3>The Rubik’s Cube is one of the most popular puzzles in the world. People’s experiences with this toy range from solving it in under three seconds to scrambling it and leaving it on a shelf because it's too difficult. Whether or not you can solve it, there's a lot of fascinating math behind this puzzle.
         I've been solving Rubik’s Cubes since I was ten years old and sometimes I would sit in one spot and solve the cube hundreds of times. This got to the point where I was at one point worried that I would run through all the possibilities. 
@@ -128,13 +127,13 @@
 
 
 
-<h2>Final Thoughts</h2>
+<h2>What's Next?</h2>
 
 <h3>With over 43 quintillion possible scrambles, 
     it's clear that no two randomly scrambled cubes are likely to be 
     the same. One last thought, how long would it take for me to go through all
      43 quintillion? I average about 12 seconds per solve, meaning it would take 
-     about 516 quintillion seconds or 16.4 trillion years!!
+     about 215 quintillion seconds or 6.8 trillion years!!
 </h3>
 <img class ="headerImage" src="3x3Image.webp"   alt="3x3 Image">
 
