--- a/boredomBlog.html
+++ b/boredomBlog.html
@@ -66,7 +66,7 @@
           <div class="chaosImage" style="height:200px;"></div>
           <h5>Sinclair Hansen, April 26, 2025</h5>
 
-          <p>How a 0.001 degree change can make all the difference</p>
+          <p>How a 0.001 degree change can lead to chaos.</p>
           <p></p>
         </div> 
 
@@ -123,7 +123,7 @@
       </div>
       <div class="rightcolumn">
         <div class="card">
-          <img class="fakeimg" src="PythPhoto.jpg"   alt="About Image">
+          <img class="fakeimg" src="Images/PythPhoto.jpg"   alt="About Image">
           <a class="link" href="index.html" rel="noopener noreferrer">About Me</a>
           <p>My name is Sinclair Hansen and I'm a sophomore CS student...</p>
         </div>
