--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
         </section>
 
-        <img class = "aboutImage" src="PythPhoto.jpg" alt="Sinclair Photo">
+        <img class = "aboutImage" src="Images/PythPhoto.jpg" alt="Sinclair Photo">
 
         
 
