--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sinclair Hansen </title>
   <meta name="description" content="Sinclair Hansen's Epic Portfolio">
-  <link rel="icon" type ="image/png" href ="Favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="projects.css">
 </head>
@@ -74,7 +73,7 @@
 
         <section2 class ="section2">
             <h4></h4>
-            <img class ="aboutImage" src="MRIlogo.jpg"   alt="Tumor Detector">
+            <img class ="aboutImage" src="Images/MRIlogo.jpg"   alt="Tumor Detector">
             <p>Using the PyTorch,timm, matplotlib, and numpy libraries, I made a
               ML program that detects gliomas, meningioma, and pituitary tumors in MRI scans. 
               This program trains the model using over 5000 images. I presented this at the STEAM @ Schoolcraft conference, 
@@ -83,7 +82,7 @@
         </section2>
         <p></p>
         <section2 class = "section2">
-            <img class ="aboutImage" src="FutureCodersLogo.png"   alt="futureCoders Logo">
+            <img class ="aboutImage" src="Images/FutureCodersLogo.png"   alt="futureCoders Logo">
             <p> Future Coders Foundation is a non-profit I am currently co-developing, with the goal of providing
             coding resources to students that don't have them. I helped build the website using HTML/CSS. A Web3 API
          was imported for the contacts page. </p>
@@ -92,7 +91,7 @@
 
         <section2 class = "section2">
             <h4></h4>
-            <img class ="aboutImage" src="earthPhoto.jpg"   alt="Population Logo">
+            <img class ="aboutImage" src="Images/earthPhoto.jpg"   alt="Population Logo">
             <p> The is a data analysis project I made in Python. A world population dataset is used as input, and I 
                 utilized libraries like matplotlib, numpy, pandas, and folium to create graphs/maps of the data. 
             </p>
@@ -104,7 +103,7 @@
         
         
         <section2 class = "section2">
-            <img class = "aboutImage" src="WeatherLogo.png"   alt="Weather Logo Logo">
+            <img class = "aboutImage" src="Images/WeatherLogo.png"   alt="Weather Logo Logo">
             <p> This is a weather application that I coded in Python. It uses the OpenWeather API to retrieve current weather data. After the user inputs a city, the weather is displayed with an emoji. This program introduced me to PyQt5 and APIs. My goal going forward with this project is to expand it to a 7-day forecast. It would also be fun to implement precip maps.
             </p>
             <a class = "button" href = "https://github.com/sinclairHansen/weatherApp"target="_blank" rel="noopener noreferrer">Weather App Repository</a>
