--- a/experience.html
+++ b/experience.html
@@ -16,7 +16,7 @@
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="experience.html">Experience</a></li>
     <li><a href="projects.html">Projects</a></li>
-    <li><a href="boredomBlog.html">Boredom Blog</a></li>
+    <li><a href="Blog/boredomBlog.html">Boredom Blog</a></li>
     <li></a></li>
   </ul>
 
@@ -32,7 +32,7 @@
     <div id="myLinks">
       <a href="experience.html">Experience</a>
       <a href="projects.html">Projects</a>
-      <a href="boredomBlog.html">Boredom Blog</a>
+      <a href="Blog/boredomBlog.html">Boredom Blog</a>
     </div>
     <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
