--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="experience.html">Experience</a></li>
     <li><a href="projects.html">Projects</a></li>
-    <li><a href="boredomBlog.html">Boredom Blog</a></li>
+    <li><a href="Blog/boredomBlog.html">Boredom Blog</a></li>
     <li></a></li>
   </ul>
 
@@ -32,7 +32,7 @@
     <div id="myLinks">
       <a href="experience.html">Experience</a>
       <a href="projects.html">Projects</a>
-      <a href="boredomBlog.html">Boredom Blog</a>
+      <a href="Blog/boredomBlog.html">Boredom Blog</a>
     </div>
     <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -78,7 +78,7 @@
               ML program that detects gliomas, meningioma, and pituitary tumors in MRI scans. 
               This program trains the model using over 5000 images. I presented this at the STEAM @ Schoolcraft conference, 
               showing how AI is used to positively impact the medical field and received first place for my work.</p>
-            <a class = "button" href = "tumorDetection.html" rel="noopener noreferrer">Tumor Detection</a>
+            <a class = "button" href = "Blog/tumorDetection.html" rel="noopener noreferrer">Tumor Detection</a>
         </section2>
         <p></p>
         <section2 class = "section2">
