--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sinclair Hansen </title>
+  <link rel="icon" type="image/x-icon" href="/Images/Favicon.png">
   <meta name="description" content="Sinclair Hansen's Epic Portfolio">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="projects.css">
@@ -82,11 +83,9 @@
         </section2>
         <p></p>
         <section2 class = "section2">
-            <img class ="aboutImage" src="Images/FutureCodersLogo.png"   alt="futureCoders Logo">
-            <p> Future Coders Foundation is a non-profit I am currently co-developing, with the goal of providing
-            coding resources to students that don't have them. I helped build the website using HTML/CSS. A Web3 API
-         was imported for the contacts page. </p>
-            <a class = "button" href="https://futurecodersfoundation.github.io"targets="_blank" rel="noopener noreferrer">FCF Website</a>
+            <img class ="aboutImage" src="Images/pendulumImage.jpg"   alt="DoUbLe PeNdUlUm">
+            <p> Built an interactive double pendulum simulator using p5.js, allowing users to input custom values for lengths (L1, L2) and masses (m1, m2), and visualize up to 150 pendulums simultaneously. This project serves as a visual companion to my research in Chaos Theory, demonstrating sensitive dependence on initial conditions and nonlinear dynamics. </p>
+            <a class = "button" href="Blog/Pendulum/pendulum.html"targets="_blank" rel="noopener noreferrer">Try it Out!</a>
         </section2>
 
         <section2 class = "section2">
